# kitti_odometry_dataset_to_rosbag_file

./: README.md
src/: CMakeLists.txt  mk_rosbag.cpp  package.xml
