<?xml version="1.0"?>
<package format="2">
  <name>mk_rosbag</name>
  <version>0.1.0</version>
  <description>ROS package to convert image and timestamp data to a ROS bag.</description>

  <maintainer email="me@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>

  <export></export>
</package>
